--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,21 +8,20 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:largeHeap="true"
-        android:screenOrientation="portrait"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Main2Activity_Quiz3"></activity>
-        <activity android:name=".Main2Activity_Quiz2" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".Main2Activity_Quiz3" android:screenOrientation="portrait"></activity>
+        <activity android:name=".Main2Activity_Quiz2" android:screenOrientation="portrait"/>
+        <activity android:name=".MainActivity" android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Main2Activity_Login" />
-        <activity android:name=".Main2Activity_Quiz1" />
+        <activity android:name=".Main2Activity_Login" android:screenOrientation="portrait"/>
+        <activity android:name=".Main2Activity_Quiz1" android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
